--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Soham Ghosh - DevOps Engineer & Systems Developer</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <title>Soham's Portfolio</title>
     <meta name="description" content="DevOps Engineer specializing in cloud infrastructure, automation, and innovative software solutions. Experience with AWS, Kubernetes, Python, and database systems." />
     <meta name="author" content="Soham Ghosh" />
     
