--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
+
     <title>Soham's Portfolio</title>
     <meta name="description" content="DevOps Engineer specializing in cloud infrastructure, automation, and innovative software solutions. Experience with AWS, Kubernetes, Python, and database systems." />
     <meta name="author" content="Soham Ghosh" />
