--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link rel="manifest" href="/site.webmanifest">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Electrolize&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Electrolize&family=Iceland&display=swap" rel="stylesheet">
+
+
     <title>Soham's Portfolio</title>
     <meta name="description" content="DevOps Engineer specializing in cloud infrastructure, automation, and innovative software solutions. Experience with AWS, Kubernetes, Python, and database systems." />
     <meta name="author" content="Soham Ghosh" />
