--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
     <meta property="og:title" content="Soham Ghosh - DevOps Engineer & Systems Developer" />
     <meta property="og:description" content="DevOps Engineer specializing in cloud infrastructure, automation, and innovative software solutions." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@soham_devops" />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
 
   <body>
