--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -30,10 +30,9 @@
     <meta name="description" content="DevOps Engineer specializing in cloud infrastructure, automation, and innovative software solutions. Experience with AWS, Kubernetes, Python, and database systems." />
     <meta name="author" content="Soham Ghosh" />
     
-    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
 
     <meta property="og:title" content="Soham Ghosh - DevOps Engineer & Systems Developer" />
     <meta property="og:description" content="DevOps Engineer specializing in cloud infrastructure, automation, and innovative software solutions." />
